--- a/ChatBot.html
+++ b/ChatBot.html
@@ -3,15 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script>
-      window.webchatMethods = {
-        // called at each user message
-        getMemory: (conversationId) => {
-          const memory = { userName: 'Dominik Bousquet', userId: 123456 }
-          return { memory, merge: true }
-        }
-      }
-    </script>
+   <script
+src="https://cdn.cai.tools.sap/webchat/webchat.js"
+channelId="c343f887-5050-47b2-a70f-ce7eff074054"
+token="1674479d4032f1418935d14da2fe2a31"
+id="cai-webchat">
+<meta name="viewport" content="width=device-width">
+</script>
   </head>
 
   <body>
@@ -52,13 +50,7 @@
       
 
 
-      <img src="Fiori.jpg" width="100%" height="100%" />
-      <script src="https://api.cai.tools.sap/connect/v1/webhook/76508cfc-060b-4d7b-857d-6293a402aaf2"></script>
-      <script src="https://cdn.cai.tools.sap/webchat/webchat.js"
-         channelId="51e0e57e-4b2f-4b6f-9d11-5849bd8da506"
-         token="a60cd5a516b2615ed83f696196585080"
-         id="cai-webchat"
-         ></script>
+    
 
 
 
@@ -66,10 +58,5 @@
 </html>
 
 
-<script src="https://cdn.cai.tools.sap/webchat/webchat.js"
-	channelId="51e0e57e-4b2f-4b6f-9d11-5849bd8da506"
-	token="a60cd5a516b2615ed83f696196585080"
-	id="cai-webchat"
-	></script>
   </body>
 </html>
