--- a/ChatBot.html
+++ b/ChatBot.html
@@ -51,12 +51,26 @@ id="cai-webchat">
 
 
     
-
+   <script
+src="https://cdn.cai.tools.sap/webchat/webchat.js"
+channelId="c343f887-5050-47b2-a70f-ce7eff074054"
+token="1674479d4032f1418935d14da2fe2a31"
+id="cai-webchat">
+<meta name="viewport" content="width=device-width">
+</script>
 
 
    </body>
 </html>
 
+	  
+	     <script
+src="https://cdn.cai.tools.sap/webchat/webchat.js"
+channelId="c343f887-5050-47b2-a70f-ce7eff074054"
+token="1674479d4032f1418935d14da2fe2a31"
+id="cai-webchat">
+<meta name="viewport" content="width=device-width">
+</script>
 
   </body>
 </html>
