--- a/ChatBot.html
+++ b/ChatBot.html
@@ -14,20 +14,7 @@ id="cai-webchat">
 
   <body>
 	
-<h3>Questions you can ask the Bot</h3> 
-<ul>
-    <li>What is the Customer Id for Costco  </li>
-    <li>Get stock for Chipset     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp      &nbsp     &nbsp     &nbsp     &nbsp      
-        (Reference data - <a href="https://ombot.cfapps.eu10.hana.ondemand.com/getstockdata" target="_blank">Stock Data service</a> ) </li>    
-    <li>What is the price of Chipset</li>
-    <li>Get price for 7100234313</li>
-    <li>What is the status of order 7100002394     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp     &nbsp                    
-        (Reference data - <a href="https://ombot.cfapps.eu10.hana.ondemand.com/getorderdata" target="_blank">Order Data service</a> ) </li>
-    <li>order status 2318</li>
-    <li>reorder 2318</li>
-    <li>What should I work on next</li>
-  </ul>
-
+<h3>SAP on Cloud Enablement</h3> 
 
 <script src="https://api.cai.tools.sap/connect/v1/webhook/76508cfc-060b-4d7b-857d-6293a402aaf2">
 </script>
