--- a/ChatBot.html
+++ b/ChatBot.html
@@ -33,6 +33,7 @@ id="cai-webchat">
 
 
    <body  style="background-color:powderblue;" >
+	   <img src = "https://caifaq.onrender.com/Fiori.jpg">
 
       
 
