--- a/ChatBot.html
+++ b/ChatBot.html
@@ -33,7 +33,7 @@ id="cai-webchat">
 
 
    <body  style="background-color:powderblue;" >
-	   <img src = "https://caifaq.onrender.com/Communities.png">
+	   <img width="100%" src="https://caifaq.onrender.com/Communities.png">
 
       
 
